--- a/notebooks/superstore.ipynb
+++ b/notebooks/superstore.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -167,10 +167,10 @@
     }
    ],
    "source": [
-    "# Group by Order Date and aggregate profit\n",
+    "# Agrupado pela data da venda e lucros acumulados\n",
     "tend_lucro = df.groupby('Order Date')['Profit'].sum()\n",
     "\n",
-    "# Plot profit trend\n",
+    "# Gráfico de Tendência dos lucros\n",
     "plt.figure(figsize=(12, 6))\n",
     "tend_lucro.plot()\n",
     "plt.title('Tendência de lucro ao longo do tempo')\n",
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
     "# Exibir dados de frequência mensal e vendas agregadas\n",
     "vendas_mensais = df.resample('ME', on='Order Date')['Sales'].sum()\n",
     "\n",
-    "# Plot monthly sales\n",
+    "# Gráfico das vendas mensais\n",
     "plt.figure(figsize=(12, 6))\n",
     "vendas_mensais.plot()\n",
     "plt.title('Tendência de vendas mensais')\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
     "# Exibir dados de frequência mensal e lucro agregado\n",
     "lucro_semanal = df.resample('W', on='Order Date')['Profit'].sum()\n",
     "\n",
-    "# Plot weekly profit\n",
+    "# Gráfico dos lucros semanais\n",
     "plt.figure(figsize=(12, 6))\n",
     "lucro_semanal.plot()\n",
     "plt.title('Tendência de Lucro Semanal')\n",
